ecmascript/parser/tests/test262-error-references/fail/4e885526e8dfaa12.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/4e885526e8dfaa12.js:1:11
  |
1 | f({x = 0})
  |           ^

error: Unexpected token
 --> $DIR/tests/test262-parser/fail/4e885526e8dfaa12.js:1:4
  |
1 | f({x = 0})
  |    ^^^^^

